# MAT281_2024

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: README.md  mkdocs.yml
.github/workflows/: documentation.yml
__init__/: index.html
docs/: evaluation.md  index.md  mat281_01.md  mat281_02.md
docs/homeworks/: hw_01.ipynb  hw_02.ipynb
docs/labs/: lab_01.ipynb  lab_02.ipynb  lab_031.ipynb  lab_032.ipynb  lab_04.ipynb  lab_05.ipynb  lab_06.ipynb  lab_071.ipynb  lab_072.ipynb  lab_08.ipynb  lab_09.ipynb  lab_10.ipynb
docs/labs/data/: libertad_prensa_01.csv
docs/lectures/data_manipulation/: data_intro.md  eda_01.ipynb  pd_01a.ipynb  pd_01b.ipynb  pd_02.ipynb  pd_03.ipynb  pd_04.ipynb  pd_intro.ipynb  sc_01.ipynb
docs/lectures/machine_learning/: 011_concepts.ipynb  012_sklearn.ipynb  01_intro.ipynb  basic_01.ipynb  cla_01.ipynb  ml_intro.ipynb  ml_intro.md  ns_01.ipynb  ns_02.ipynb  over_01.ipynb  (+4 more)
docs/projects/: project_definition.md
evaluation/: index.html
homeworks/hw_01/: index.html
homeworks/hw_02/: index.html
labs/data/: libertad_prensa_02.csv
labs/lab_01/: index.html
labs/lab_02/: index.html
labs/lab_031/: index.html
labs/lab_032/: index.html
labs/lab_04/: index.html
labs/lab_05/: index.html
labs/lab_06/: index.html
labs/lab_071/: index.html
labs/lab_072/: index.html
labs/lab_08/: index.html
labs/lab_09/: index.html
labs/lab_10/: index.html
mat281_01/: index.html
mat281_02/: index.html
projects/project_definition/: index.html
search/: search_index.json
(+62 files in other folders)
